--- a/mlops_dab_demo/resources/batch-inference-workflow-resource.yml
+++ b/mlops_dab_demo/resources/batch-inference-workflow-resource.yml
@@ -22,9 +22,9 @@ resources:
             notebook_path: ../deployment/batch_inference/notebooks/BatchInference.py
             base_parameters:
               env: ${bundle.target}
-              input_table_name: ${bundle.target}.mlops-dab-demo.feature_store_inference_input  # TODO: create input table for inference
-              output_table_name: ${bundle.target}.mlops-dab-demo.predictions
-              model_name: ${bundle.target}.mlops-dab-demo.${var.model_name}
+              input_table_name: ${var.catalog_name}_${bundle.target}.mlops-dab-demo.feature_store_inference_input  # TODO: create input table for inference
+              output_table_name: ${var.catalog_name}_${bundle.target}.mlops-dab-demo.predictions
+              model_name: ${var.catalog_name}_${bundle.target}.mlops-dab-demo.${var.model_name}
               # git source information of current ML resource deployment. It will be persisted as part of the workflow run
               git_source_info: url:${bundle.git.origin_url}; branch:${bundle.git.branch}; commit:${bundle.git.commit}
 
