--- a/.azure/devops-pipelines/mlops-dab-demo-tests-ci.yml
+++ b/.azure/devops-pipelines/mlops-dab-demo-tests-ci.yml
@@ -13,6 +13,10 @@ trigger:
 variables:
   - group: mlops-dab-demo variable group
 
+steps:
+- script: echo $(Build.Reason) # variable defined in pipeline variables
+- script: echo $(System.PullRequest.TargetBranch) # variable defined in YAML
+
 jobs:
   - job: UnitTests
     displayName: 'Unit Tests'
