--- a/.azure/devops-pipelines/mlops-dab-demo-tests-ci.yml
+++ b/.azure/devops-pipelines/mlops-dab-demo-tests-ci.yml
@@ -13,11 +13,22 @@ trigger:
 variables:
   - group: mlops-dab-demo variable group
 
-steps:
-  - script: echo $(Build.Reason) # variable defined in pipeline variables
-  - script: echo $(System.PullRequest.TargetBranch) # variable defined in YAML
-
 jobs:
+  - job: EnvPrint
+    displayName: 'EnvPrint'
+    # Trigger unit test upon making a PR against the main branch
+    pool:
+      vmImage: 'ubuntu-latest'
+
+    steps:
+    - script: env | sort
+      displayName: 'Environment / Context'
+
+    - checkout: self
+      persistCredentials: true
+      clean: true
+      displayName: 'Checkout & Build.Reason: $(Build.Reason) & Build.SourceBranchName: $(Build.SourceBranchName) $(System.PullRequest.TargetBranch)'
+
   - job: UnitTests
     displayName: 'Unit Tests'
     # Trigger unit test upon making a PR against the main branch
