--- a/.azure/devops-pipelines/mlops-dab-demo-tests-ci.yml
+++ b/.azure/devops-pipelines/mlops-dab-demo-tests-ci.yml
@@ -27,7 +27,7 @@ jobs:
     - checkout: self
       persistCredentials: true
       clean: true
-      displayName: 'Checkout & Build.Reason: $(Build.Reason) & Build.SourceBranchName: $(Build.SourceBranchName) $(System.PullRequest.TargetBranch)'
+      displayName: 'Checkout & Build.Reason: $(Build.Reason) & Build.SourceBranchName: $(Build.SourceBranchName) & System.PullRequest.TargetBranch: $(System.PullRequest.TargetBranch)'
 
   - job: UnitTests
     displayName: 'Unit Tests'
