--- a/.azure/devops-pipelines/mlops-dab-demo-bundle-cicd.yml
+++ b/.azure/devops-pipelines/mlops-dab-demo-bundle-cicd.yml
@@ -21,8 +21,9 @@ stages:
   # Trigger BundleCI stage on PR against the default branch, and not on pushes to other branches
   condition: |
     and(
+      not(eq(variables['Build.Reason'], 'IndividualCI')),
       eq(variables['Build.Reason'], 'PullRequest'),
-      eq(variables['System.PullRequest.TargetBranch'], 'refs/heads/main')
+      eq(variables['System.PullRequest.TargetBranch'], 'main')
     )
 
   jobs:
@@ -90,7 +91,7 @@ stages:
   # Trigger deployment of bundle resources when PRs are merged into the main branch
   condition: |
     and(
-      eq(variables['Build.SourceBranch'], 'refs/heads/main'),
+      eq(variables['Build.SourceBranch'], 'main'),
       not(eq(variables['Build.Reason'], 'PullRequest'))
     )
 
