--- a/.azure/devops-pipelines/mlops-dab-demo-tests-ci.yml
+++ b/.azure/devops-pipelines/mlops-dab-demo-tests-ci.yml
@@ -14,28 +14,14 @@ variables:
   - group: mlops-dab-demo variable group
 
 jobs:
-  - job: EnvPrint
-    displayName: 'EnvPrint'
-    # Trigger unit test upon making a PR against the main branch
-    pool:
-      vmImage: 'ubuntu-latest'
-
-    steps:
-    - script: env | sort
-      displayName: 'Environment / Context'
-
-    - checkout: self
-      persistCredentials: true
-      clean: true
-      displayName: 'Checkout & Build.Reason: $(Build.Reason) & Build.SourceBranchName: $(Build.SourceBranchName) & System.PullRequest.TargetBranch: $(System.PullRequest.TargetBranch)'
-
   - job: UnitTests
     displayName: 'Unit Tests'
     # Trigger unit test upon making a PR against the main branch
     condition: |
       and(
+        not(eq(variables['Build.Reason'], 'IndividualCI')),
         eq(variables['Build.Reason'], 'PullRequest'),
-        eq(variables['System.PullRequest.TargetBranch'], 'refs/heads/main')
+        eq(variables['System.PullRequest.TargetBranch'], 'main')
       )
     pool:
       vmImage: 'ubuntu-latest'
