--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ mlruns
 .dbx
 # Exclude local environment directory
 venv
+.venv
 # Exclude local distribution/packaging directories
 *.egg-info/
 build
