fix azure pipeline

--- a/.azure/devops-pipelines/mlops-dab-demo-bundle-cicd.yml
+++ b/.azure/devops-pipelines/mlops-dab-demo-bundle-cicd.yml
@@ -91,7 +91,7 @@ stages:
   # Trigger deployment of bundle resources when PRs are merged into the main branch
   condition: |
     and(
-      eq(variables['Build.SourceBranch'], 'main'),
+      eq(variables['Build.SourceBranch'], 'refs/heads/main'),
       not(eq(variables['Build.Reason'], 'PullRequest'))
     )
 
@@ -142,7 +142,7 @@ stages:
   # Trigger deployment of Bundle resources when PRs are merged into the release branch
   condition: |
     and(
-      eq(variables['Build.SourceBranch'], 'release'),
+      eq(variables['Build.SourceBranch'], 'refs/heads/release'),
       not(eq(variables['Build.Reason'], 'PullRequest'))
     )
 
